import org.slf4j.event.Level

plugins {
    id("idea")
    id("eclipse")
    id("maven-publish")
    id("net.neoforged.moddev") version "2.0.107" // https://projects.neoforged.net/neoforged/ModDevGradle
    id("net.kyori.blossom") version "2.1.0" // https://github.com/KyoriPowered/blossom
    id("dev.ithundxr.silk") version "0.11.15" // https://github.com/ithundxr/silk
    id("io.freefair.lombok") version "8.11"
}

apply(from: "./gradle/java.gradle")
apply(from: "gradle/property_loader.gradle")

String gitHash = "${calculateGitHash() + (hasUnstaged() ? "-modified" : "")}"

base {
    archivesName = "rutile-${project.mod_version}"
    group = 'dev.metallurgists.rutile'
    version = "neoforge-mc" + project.minecraft_version
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println("Java: ${System.getProperty("java.version")}, JVM: ${System.getProperty("java.vm.version")} (${System.getProperty("java.vendor")}), Arch: ${System.getProperty("os.arch")}")

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

neoForge {
    version = neo_version

    accessTransformers = files("src/main/resources/META-INF/accesstransformer.cfg")

    if (parchment_version != "none") {
        parchment {
            minecraftVersion = parchment_minecraft_version == "same" ? minecraft_version : parchment_minecraft_version
            mappingsVersion = parchment_version
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    runs {
        configureEach {
            systemProperty("forge.logging.markers", "REGISTRIES")
            jvmArgument("-XX:+IgnoreUnrecognizedVMOptions")
            jvmArgument("-XX:+AllowEnhancedClassRedefinition")

            systemProperty("mixin.debug.verbose", "true")
            systemProperty("mixin.debug.export", "true")

            systemProperty("neoforge.enabledGameTestNamespaces", mod_id as String)

            logLevel = Level.DEBUG
        }

        client {
            client()
        }

        server {
            server()

            gameDirectory = project.file("run/server")

            programArgument("--nogui")
        }

        data {
            data()

            programArguments.addAll(
                    "--mod", mod_id as String,
                    "--all",
                    "--output", file("src/generated/resources/").getAbsolutePath(),
                    "--existing", file("src/main/resources/").getAbsolutePath()
            )
        }

        gameTestServer {
            type = "gameTestServer"
        }
    }
}

sourceSets.main {
    resources {
        srcDir("src/generated/resources")
        exclude(".cache/")
    }

    blossom.javaSources {
        property("version", mod_version)
        property("gitCommit", gitHash.toString())
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven { url = "https://maven.createmod.net" } // Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI, Vazkii's Mods
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" }
    // NeoForge config api port, needed by ponder
    mavenLocal()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    jarJar(implementation("com.tterrag.registrate:Registrate:$registrate_version"))

    jarJar(implementation("net.createmod.ponder:Ponder-NeoForge-$minecraft_version:$ponder_version"))

    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-$minecraft_version:$flywheel_version")
    runtimeOnly(jarJar("dev.engine-room.flywheel:flywheel-neoforge-$minecraft_version:$flywheel_version") {
        version {
            strictly "[1.0,2.0)"
            prefer flywheel_version
        }
    })
    runtimeOnly("dev.engine-room.vanillin:vanillin-neoforge-$minecraft_version:$vanillin_version")

    implementation("mezz.jei:jei-$minecraft_version-neoforge:$jei_version")
}

compileJava.options.encoding = 'UTF-8'



processResources {
    def buildProps = project.properties.clone()

    // Replaces FML's magic file.jarVersion string with the correct version at build time.
    buildProps.put('file', [jarVersion: project.version])

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand buildProps
    }
}

compileJava {
    options.compilerArgs = ['-Xdiags:verbose']
}

jar {
    //String name = base.archivesName.get()

    //from("LICENSE") {
    //    rename { "${it}_$name" }
    //}

    manifest.attributes([
            "MixinConfigs": "rutile.mixins.json",
            "Git-Hash"    : gitHash
    ])
}

tasks.named("sourcesJar", Jar) {
    manifest.attributes([
            "Git-Hash": gitHash
    ])
}

final slimJar = tasks.register("slimJar", Jar) {
    archiveClassifier = "slim"
    from(sourceSets.main.output)
    manifest.attributes([
            "MixinConfigs": "rutile.mixins.json",
            "Git-Hash"    : gitHash
    ])
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            "mod_version"           : mod_version,
            "mod_id"                : mod_id,
            "mod_name"              : mod_name,
            "mod_author"            : mod_author,
            "mod_description"       : mod_description,
            "mod_license"           : mod_license,
            "neo_version"           : neo_version,
            "minecraft_version"     : minecraft_version,
            "ponder_version"        : ponder_version,
            "flywheel_version_range": flywheel_version_range,
    ]
    inputs.properties(replaceProperties)
    expand(replaceProperties)
    from("src/main/templates")
    into("build/generated/sources/modMetadata")
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir(generateModMetadata)
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask(generateModMetadata)

String calculateGitHash() {
    try {
        ExecOutput output = providers.exec {
            commandLine("git", "rev-parse", "HEAD")
        }
        return output.standardOutput.asText.get().trim()
    } catch (Throwable ignored) {
        return "unknown"
    }
}

boolean hasUnstaged() {
    try {
        ExecOutput output = providers.exec {
            commandLine("git", "status", "--porcelain")
        }
        String result = output.standardOutput.asText.get().replace("/M gradlew(\\.bat)?/", "").trim()
        if (!result.isEmpty())
            println("Found stageable results:\n ${result}\n")
        return !result.isEmpty()
    } catch (Throwable ignored) {
        return false
    }
}